objects/Request_Hub_Items__c.object
<CustomObject>
    <description>This object  is used to store request hub items that are showing from Lightning Request Hub UI. Each request hub item is a record of this object, there should be no more than 50 records. All fields defined in this object are ready only except Admin or Super Users as this object is only used in back end. Initial data will be loaded by dataloader and add  as needed after the initial load.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the request Item is active then checked, otherwise unchecked.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_YTD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the request Item need to show Closed YTD count.</description>
        <label>Closed YTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>provide information description about what is the request hub item.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FavoriteColor__c</fullName>
        <label>FavoriteColor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OrangeColor</fullName>
                </value>
                <value>
                    <fullName>GreyColor</fullName>
                    <default>true</default>
                    <label>GreyColor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Group_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if Request Item is for LGNA Group Account. the label name is matching with Group Account record type name, do please don&apos;t change except the record type name is also changed from account.</description>
        <label>LG Group Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label name of the request hub item that display on UI</description>
        <label>Label</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Sale_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the request item is for New Sale opportunity. Label name is matching with New Sale Opportunity record type. so no change on field label.</description>
        <label>New Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Off_Cycle_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the request hub item is for Off Cycle Opportunity.  label name is matching with Off-Cycle opportunity record type name, so don&apos;t change the label field label except when opportunity record type name is changed.</description>
        <label>Off-Cycle Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if the request Item require open request count.</description>
        <label>Open Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the request hub item is needed to display for Prospect account. Label name is matching with prospect account record type. so no change on field label.</description>
        <label>Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the request item is for Renewal Opportunity. The label name is matching the renewal opp record type name &apos;Renewal&apos;, so please don&apos;t change except the record type name from opportunity is changed.</description>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SG_Group_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checked if the request hub item is needed to display for SG Group Account. The label name is matching with Group Account record type name, so please don&apos;t change except if the record type name is also changed from Account.</description>
        <label>SG Group Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The Object Name that the request is associated with. like Cancellation is from Account object.</description>
        <label>Type</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFavorited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used on UI as cache to mark the request Item to be favorite/unfavorite. It is not used to store data in table, so this field will be always empty.</description>
        <label>isFavorited?</label>
        <type>Checkbox</type>
    </fields>
    <label>Request Hub Items</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Label__c</columns>
        <columns>Closed_YTD__c</columns>
        <columns>Open_Request__c</columns>
        <columns>LG_Group_Account__c</columns>
        <columns>Prospect_Account__c</columns>
        <columns>New_Sale_Opp__c</columns>
        <columns>Off_Cycle_Opp__c</columns>
        <columns>Renewal_Opp__c</columns>
        <columns>SG_Group_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Group_Account</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Label__c</columns>
        <columns>Closed_YTD__c</columns>
        <columns>Open_Request__c</columns>
        <columns>LG_Group_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LG_Group_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Group Account</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Hub Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>